--- a/style.css
+++ b/style.css
@@ -101,17 +101,47 @@ body {
   padding: 16px 0;
 }
 
-.phrase {
-  font-size: 20px;
-  font-weight: 300;
-  text-align: center;
+.main__blockquote {
+  display: flex;
   width: 75%;
   margin: 0 auto;
   margin-top: 2em;
-  padding: 30px;
-  border: 2px solid #111;
-  border-style: dashed;
+  padding: 30px 20px;
+  border: 1px solid #111;
+  /* border-style: dashed; */
   background: #e2b70b;
+  border-left-width: 10px;
+}
+
+.main__blockquote::before{
+  content: "\201c";
+  font-size: 100px;
+  font-family: sans-serif;
+  margin-bottom: -40px;
+  margin-top: -20px;
+}
+
+.main__blockquote__text {
+  font-size: 20px;
+  font-style: italic;
+  font-weight: 300;
+  text-align: center;
+  line-height: 1.5;
+  margin: 0;
+}
+
+.main__blockquote__text:not(:last-child){
+  margin-bottom: 0.5em;
+}
+
+.main__blockquote__author{
+  font-size: 20px;
+  font-weight: bold;
+  text-align: right;
+}
+
+.main__blockquote__author::before{
+  content: "\2014\0020";
 }
 
 .main__about {
@@ -183,12 +213,12 @@ body {
   margin-top: 2em;
 }
 
-.msm{
+.msm {
   width: 100%;
   text-align: right;
 }
 
-.main__header-event a{
+.main__header-event a {
   color: rgb(51, 51, 51);
   padding: 14px;
   border-radius: 4em;
@@ -198,17 +228,17 @@ body {
   transition: all .5s ease-in-out;
 }
 
-.main__header-event p{
+.main__header-event p {
   width: 100%;
 }
 
-.main__header-event a:hover{
+.main__header-event a:hover {
   background: #000;
   color: #D4AB01;
   transition: all .5s ease-in-out;
 }
 
-.main__test{
+.main__test {
   /* width: 76.9%; */
   width: 75%;
   margin: 0 auto;
@@ -310,7 +340,8 @@ body {
 */
 
 @media screen and (max-width: 1100px) {
-  .phrase,
+
+  .main__blockquote,
   .test,
   .main__header-event {
     width: 90%;
