--- a/style.css
+++ b/style.css
@@ -87,18 +87,46 @@ body {
   TODO: -------------------------------------------------------------------------------------------------------------
 */
 
-.test {
+.main h2 {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  /* Aumentar el tamaño del texto */
+  font-size: 2rem;
+  line-height: 1.6em;
+  text-align: center;
+}
+
+.main__logo {
   font-size: 20px;
   font-weight: 300;
+  text-align: center;
   width: 75%;
   margin: 0 auto;
-  background: #000;
-  color: #fff;
-  text-align: center;
-  border: 2px solid #D4AB01;
-  border-style: dashed;
-  /* border-radius: 8px; */
-  padding: 16px 0;
+  margin-top: 2em;
+  /* border: 2px solid #111; */
+}
+
+.main__logo__image{
+  background: cyan;
+  width: 9em;
+  height: 6.5em;
+  margin: 0 auto;
+  margin-bottom: .5em;
+}
+
+.main__logo__image img {
+  width: 100%;
+  height: 100%;
+}
+
+.main__logo__first-title {
+  font-family: 'Merriweather', serif;
+  font-size: 19px;
+}
+
+.main__logo__second-title {
+  font-family: 'Arial Nova Light', 'Roboto', Arial, Helvetica, sans-serif;
+  font-size: 19px;
 }
 
 .main__blockquote {
@@ -113,7 +141,7 @@ body {
   border-left-width: 10px;
 }
 
-.main__blockquote::before{
+.main__blockquote::before {
   content: "\201c";
   font-size: 100px;
   font-family: sans-serif;
@@ -130,43 +158,33 @@ body {
   margin: 0;
 }
 
-.main__blockquote__text:not(:last-child){
+.main__blockquote__text:not(:last-child) {
   margin-bottom: 0.5em;
 }
 
-.main__blockquote__author{
+.main__blockquote__author {
   font-size: 20px;
   font-weight: bold;
   text-align: right;
 }
 
-.main__blockquote__author::before{
+.main__blockquote__author::before {
   content: "\2014\0020";
 }
 
 .main__about {
   font-size: 20px;
   font-weight: 300;
-  text-align: center;
   width: 75%;
   margin: 0 auto;
-  padding: 2em 3em;
-  /* border: 2px solid #111; */
-}
-
-.main__about img {
-  width: 15em;
-  height: 9em;
-}
-
-.main__about__first-title {
-  font-family: 'Merriweather', serif;
-  font-size: 19px;
-}
-
-.main__about__second-title {
-  font-family: 'Arial Nova Light', 'Roboto', Arial, Helvetica, sans-serif;
-  font-size: 19px;
+  background: #000;
+  color: #fff;
+  text-align: center;
+  border: 1px solid #D4AB01;
+  /* border-style: dashed; */
+  /* border-radius: 8px; */
+  padding-bottom: 0.5em;
+  margin-top: 2em;
 }
 
 .main__about__content {
@@ -174,7 +192,13 @@ body {
   margin-bottom: 2em;
 }
 
-.test a {
+.main__about__more {
+  display: block;
+  width: 100%;
+  height: 50px;
+}
+
+.main__about__more a {
   color: #000;
   padding: 18px;
   border-radius: 4em;
@@ -184,19 +208,10 @@ body {
   transition: all .5s ease-in-out;
 }
 
-.test a:hover {
+.main__about__more a:hover {
   background: rgb(51, 51, 51);
   color: #fff;
   transition: all .5s ease-in-out;
-}
-
-.main h2 {
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
-  /* Aumentar el tamaño del texto */
-  font-size: 2rem;
-  line-height: 1.6em;
-  text-align: center;
 }
 
 .main__header-event {
@@ -205,7 +220,7 @@ body {
   /* width: 76.9%; */
   width: 75%;
   height: auto;
-  background: rgb(51, 51, 51);
+  background: #000;
   margin: 0 auto;
   font-size: 20px;
   font-weight: 400;
@@ -342,8 +357,14 @@ body {
 @media screen and (max-width: 1100px) {
 
   .main__blockquote,
-  .test,
-  .main__header-event {
+  .main__about,
+  .main__header-event,
+  .main__logo {
     width: 90%;
+  }
+
+  .main__logo__first-title,
+  .main__logo__second-title{
+    font-size: 16px;
   }
 }
