--- a/pages/about/style.css
+++ b/pages/about/style.css
@@ -77,7 +77,7 @@ html{
 .container {
   /* border: 2px solid #000; */
   /* background: greenyellow; */
-  width: 90%;
+  width: 70%;
   /* max-width: 850px; */
   margin: 2em auto;
   display: flex;
@@ -97,29 +97,22 @@ h2 {
   line-height: 28px;
 }
 
-.content {
-  margin-left: 4em;
-  width: 70%;
-}
-
-.nav-lateral {
+.content-list {
   /* position: fixed; */
   /* top: 50%; */
   /* right: 0; */
-  border-top: 1px solid rgba(51,51,51,0.5);
-  background: #f4f6fa;
-  height: 100%;
-  width: 20%;
+  border: 1px solid rgba(51,51,51,0.5);
+  /* background: #f4f6fa; */
   /* transform: translateY(-50%); */
 }
 
-.nav-lateral a{
+.content-list a{
   font-weight: 300;
   font-size: 20px;
   color: #111;
 }
 
-.nav-lateral li{
+.content-list li{
   padding: 8px;
 }
 
@@ -131,14 +124,7 @@ h2 {
 */
 
 @media screen and (max-width: 1100px) {
-  .content {
-    margin-left: 0;
-    width: 100%;
-  }
-
-  .nav-lateral {
-    /* position: absolute; */
-    /* background: cyan; */
-    width: 100%;
+  .container {
+    width: 90%;
   }
 }
