Addition of images of the history of the foundation and implemented on the history page.

--- a/pages/about/style.css
+++ b/pages/about/style.css
@@ -152,4 +152,13 @@ h2 {
   .container {
     width: 90%;
   }
+
+  .content,
+  .nav-lateral{
+    width: 100%;
+  }
+
+  .nav-lateral{
+    padding-left: 0;
+  }
 }
