--- a/pages/company/style.css
+++ b/pages/company/style.css
@@ -97,3 +97,27 @@ h2 {
   text-align: justify;
   line-height: 28px;
 }
+
+.image1,
+.image2{
+  width: 100%;
+  height: 80%;
+  margin-bottom: 2em;
+}
+
+.image1 img,
+.image2 img{
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.image1 label,
+.image2 label{
+  display: block;
+  text-align: center;
+  /* font-style: italic; */
+  font-weight: 100;
+  font-size: 14px;
+  
+}
