--- a/pages/workshop/style.css
+++ b/pages/workshop/style.css
@@ -15,6 +15,13 @@
   font-family: 'Roboto', sans-serif;
 }
 
+:root {
+  /* --color: #E1C44D; */
+  --color2: #000;
+  --color3: rgba(212, 171, 1, 0.7);
+  --color: #D4AB01;
+}
+
 /* 
   TODO: -------------------------------------------------------------------------------------------------------------
   TODO: DISEÑO CAROUSEL
@@ -77,9 +84,8 @@
 
 .container {
   width: 85%;
-  max-width: 850px;
+  /* max-width: 850px; */
   margin: 0 auto;
-  margin-bottom: 2em;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -95,4 +101,76 @@ h2 {
   margin-bottom: 1.5em;
   /* Margen Inferior en los Párrafos */
   text-align: justify;
+}
+
+.container__card{
+  display: flex;
+  flex-wrap: wrap;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  margin-top: 2em;
+}
+
+.container__card__image{
+  padding: 1em;
+  width: 30%;
+  height: auto;
+}
+
+.container__card__image img{
+  width: 100%;
+  height: 100%;
+}
+
+.container__card__content{
+  width: 70%;
+}
+
+.info{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 1em;
+  border-radius: 6px;
+  width: 100%;
+  background: #ececec;
+}
+
+.more{
+  display: block;
+  width: 100%;
+  height: 50px;
+}
+
+.more a {
+  color: #000;
+  padding: 18px 25px;
+  border-radius: 4em;
+  outline: none;
+  font-size: 18px;
+  background: var(--color);
+  transition: all .5s ease-in-out;
+}
+
+.more a:hover {
+  background: rgb(51, 51, 51);
+  color: #fff;
+  transition: all .5s ease-in-out;
+}
+
+
+/* 
+  ?: ------------------------------------------------------------------------------------------------------------
+  ?: RESPONSIVE
+  ?: ------------------------------------------------------------------------------------------------------------
+*/
+
+@media screen and (max-width: 1100px) {
+  .container__card__image{
+    width: 100%;
+  }
+
+  .container__card__content{
+    width: 95%;
+    margin: 0 auto;
+  }
 }
