Cleaning of all page fonts.

--- a/pages/history/style.css
+++ b/pages/history/style.css
@@ -90,7 +90,7 @@
 .container p,
 h2 {
   /* font-family: 'Special Elite', cursive; */
-  font-family: "Charter", sans-serif;
+  /* font-family: "Charter", sans-serif; */
   font-size: 20px;
   margin-bottom: 1.5em;
   /* Margen Inferior en los Párrafos */
