--- a/pages/about/style.css
+++ b/pages/about/style.css
@@ -86,11 +86,11 @@ html {
   flex-wrap: wrap;
 }
 
-.container p,
-h2 {
+.container p {
   /* font-family: 'Special Elite', cursive; */
-  font-family: "Charter", sans-serif;
+  /* font-family: "Charter", sans-serif; */
   font-size: 20px;
+  font-weight: 300;
   margin-bottom: 1.5em;
   /* Margen Inferior en los Párrafos */
   text-align: justify;
