--- a/pages/company/style.css
+++ b/pages/company/style.css
@@ -87,11 +87,11 @@
 }
 
 
-.container p,
-h2 {
+.container p{
   /* font-family: 'Special Elite', cursive; */
-  font-family: "Charter", sans-serif;
+  /* font-family: "Charter", sans-serif; */
   font-size: 20px;
+  font-weight: 300;
   margin-bottom: 1.5em;
   /* Margen Inferior en los Párrafos */
   text-align: justify;
