--- a/pages/workshop/style.css
+++ b/pages/workshop/style.css
@@ -26,7 +26,7 @@
 /* Slideshow container */
 .slideshow-container {
   z-index: 1;
-  background: url("../../img/3.jpg");
+  background: url("../../img/fundacion.jpg");
   /* background: #000; */
   background-position: center;
   background-size: cover;
@@ -68,15 +68,6 @@
   TODO: -------------------------------------------------------------------------------------------------------------
 */
 
-.main h2 {
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
-  /* Aumentar el tamaño del texto */
-  font-size: 2rem;
-  line-height: 1.6em;
-  text-align: center;
-}
-
 .container {
   width: 85%;
   /* max-width: 850px; */
@@ -109,6 +100,16 @@
 
 .container__card__content {
   width: 70%;
+  padding: 1em 1em 1em 0;
+}
+
+.container__card__content h2 {
+  /* margin-top: 0.5em; */
+  margin-bottom: 0.5em;
+  /* Aumentar el tamaño del texto */
+  font-size: 2rem;
+  /* line-height: 1.6em; */
+  text-align: center;
 }
 
 .info {
@@ -119,13 +120,12 @@
   border-radius: 6px;
   width: 100%;
   background: #ececec;
-  font-size: 18px;
 }
 
 .details {
   display: flex;
   flex-wrap: wrap;
-  padding: 1em;
+  padding: 1em 1em 0 1em;
   width: 100%;
   font-size: 18px;
 }
@@ -163,15 +163,17 @@
 }
 
 .more {
-  /* display: block; */
-  display: none;
+  display: block;
+  /* display: none; */
   width: 100%;
-  height: 50px;
+  height: auto;
+  text-align: right;
 }
 
 .more a {
+  display: inline-block;
   color: #000;
-  padding: 18px 25px;
+  padding: 15px 22px;
   border-radius: 4em;
   outline: none;
   font-size: 18px;
@@ -207,5 +209,6 @@
   .container__card__content {
     width: 95%;
     margin: 0 auto;
+    padding: 0 0.5em 0.5em 0.5em;
   }
 }
