--- a/style.css
+++ b/style.css
@@ -390,7 +390,7 @@ main h2 {
 }
 
 .contacts{
-  background: #000;
+  background: #fff;
   padding-top: 1.5em;
   width: 85%;
   margin: 0 auto;
@@ -407,9 +407,10 @@ main h2 {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  margin: 0 auto;
+  margin: 1.5em auto;
   height: auto;
   justify-content: center;
+  border-radius: 1em;
   /* padding: 30px 30px; */
 }
 
@@ -417,6 +418,16 @@ main h2 {
 .contacts__second-section__second-column {
   padding: 20px 40px;
   width: 50%;
+}
+
+.contacts__second-section__first-column{
+  background: #D4AB01;
+  border-radius: 1em 0 0 1em;
+}
+
+.contacts__second-section__second-column{
+  background: #000;
+  border-radius: 0 1em 1em 0;
 }
 
 .contacts__second-section__first-column input,
@@ -451,9 +462,9 @@ main h2 {
 
 .contacts__second-section__first-column button {
   cursor: pointer;
-  color: #111;
+  color: #fff;
   border-radius: 3px;
-  background-color: #D4AB01;
+  background-color: #111;
   border: 0;
   padding: 15px 50px;
   font-weight: bold;
@@ -471,7 +482,12 @@ main h2 {
   opacity: 0.9;
 }
 
-.contacts__second-section__first-column h2,
+.contacts__second-section__first-column h2{
+  font-size: 2em;
+  color: #000;
+  font-weight: 300;
+  text-align: left;
+}
 .contacts__second-section__second-column h2 {
   font-size: 2em;
   color: #D4AB01;
